[tool.poetry]
name = "cipher_gy2277"
version = "0.1.0"
description = "A simple encryption method - Carsar cipher"
authors = ["Gan <gy2277@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.3.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
